BUILD: add prefix to Veracode scan number (#66)
Co-authored-by: Andy Moon <moon.andy@bcg.com>

--- a/.github/workflows/artkit-release-pipeline.yml
+++ b/.github/workflows/artkit-release-pipeline.yml
@@ -384,7 +384,7 @@ jobs:
         uses: veracode/veracode-uploadandscan-action@master
         with:
           appname: 'artkit'
-          version: '${{ github.run_number }}'
+          version: '3.1.${{ github.run_number }}'
           filepath: 'static_scan/archive.zip'
           vid: '${{ secrets.VERACODE_API_ID }}'
           vkey: '${{ secrets.VERACODE_API_KEY }}'
