--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,12 @@ huggingface = [
     "aiohttp                  ~= 3.9",
     "torch                    ~= 2.3",
     "transformers             ~= 4.41",
+    "httpx                    ~= 0.27",
 ]
 
 boto3 = [
-    "boto3                   ~= 1.34"
+    "boto3                   ~= 1.34",
+    "httpx                    ~= 0.27",
 ]
 
 dev = [
@@ -72,6 +74,7 @@ dev = [
     "pytest-asyncio           ~= 0.23",
     "pytest-cov               ~= 5.0",
     "pre-commit               ~= 3.7",
+    "moto                     ~= 5.0",
 ]
 
 testing = [
